--- a/cyberhoots.html
+++ b/cyberhoots.html
@@ -135,13 +135,13 @@
 
 				<div class="card  b_card" style="width: 100%;">
 				  <div class="card-body">
-				    <h5 class="card-title  text-primary">Event Name: Front Fest</h5>
+				    <h5 class="card-title  text-primary">Event Name: FrontFest</h5>
 				    <h6 class="card-subtitle mb-2 text-muted"><span class="s_title">Student Team Leader:</span> Dhaval Savalia (74055 05665)</h6>
 				    <p class="card-text"><span class="s_title">GTU Point:</span> 9</p>
 				    <p class="card-text"><span class="s_title">Team:</span> 1 students only</p>
 				    
 				    <p class="card-text"><span class="s_title">Details:</span></p>
-				    <p class="card-text">Fees is per head 50rupees.<br>
+				    <p class="card-text">Fees is per head 50 rupees.<br>
 						FrontFest will satisfy the hunger of a web designer. We have three levels of difficulties where participants will face several challenges related to web designing.
 						<br><br>Rules:
 						<br>This is an Individual participant event.
@@ -267,11 +267,11 @@
 				<div class="card  b_card" style="width: 100%;">
 				  <div class="card-body">
 				    <h5 class="card-title text-primary">Event Name: Urban Football(Non Technical)</h5>
-				    <h6 class="card-subtitle mb-2 text-muted"><span class="s_title">Student Team Leader:</span> Shanover Sheiyad (84880 24446)</h6>
+				    <h6 class="card-subtitle mb-2 text-muted"><span class="s_title">Student Team Leader:</span> Shanover Saiyed (84880 24446)</h6>
 				    <p class="card-text"><span class="s_title">GTU Point:</span> 9</p>
 				    <p class="card-text"><span class="s_title">Team:</span> 5-7, 5 Players, 2 substitutes</p>
 				    <p class="card-text"><span class="s_title">Details:</span></p>
-				    <p class="card-text">Fees is 100 per Team.<br>
+				    <p class="card-text">Fees is 50 per Team.<br>
 						<br>A miniature version of soccer with 5 players on each team, with 2 substitutes. Would play against to score maximum goals within limited time frame. It is better known as futsal.
 						<br><br>Rules:
 						<br>Team scoring maximum goals will win.
